# g

./: CMakeLists.txt  bot.py  leaderboard.py  main.cpp  results.db  save_result.py  send_leaderboard.py  telegram_sender.py
.github/workflows/: benchmark-runner.yml  ci-pipeline.yml  leaderboard.yml  test.yml
github_student_check/: CMakeLists.txt  save_result.py
nlohmann/: json.hpp
